Refactor area bounds handling and add SQL escape method
Replaced raw coordinate parameters in `Area` with a `Bounds` record to simplify and centralize boundary logic. Introduced a `escapeLikePattern` method to handle special SQL characters in queries. Added corresponding test adjustments and updated the relevant sections of the README documentation.